syntax = "proto3";

package openconfig.magna.mirror;

option go_package="github.com/openconfig/magna/proto/mirror";

service Mirror {
  rpc Start(StartRequest) returns (StartResponse);
  rpc Stop(StopRequest) returns (StopResponse);
}

message StartRequest {
  string from = 1;
  string to = 2;
}

message StartResponse {}

message StopRequest {
  string from = 1;
  string to = 2;
}
 
message StopResponse {}
